--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -16,3 +16,33 @@
   font-family: var(--font-geist-sans);
   background-color: var(--background);
 }
+
+.icon__container {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.card {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.card:hover {
+  transform: translateY(-10px) scale(1.02);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.08) !important;
+  z-index: 10;
+}
+
+.orange__text__container {
+  background-color: #f8f9fa;
+  width: 50px;
+  height: 50px;
+  color: var(--bs-warning);
+}
